--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -5,7 +5,7 @@
     <title>İlk Django Sayfası</title>
 </head>
 <body>
-    <h1>Hoş Geldin Django</h1>
+    <h1>Dernek Sitesine Hoşgeldiniz</h1>
     <h3>Karabük Üniversitesi Bilgisayar Mühendisliği</h3>
     <p> {{ text | safe }}</p>
 </body>
