--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -1,63 +1,72 @@
 <!-- Welcome Area Start -->
 {% load static %}
-    <section class="welcome-area">
-        <div class="welcome-slides owl-carousel">
-            <!-- Single Welcome Slide -->
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url({% static 'img/bg-img/16.jpg'%});" data-img-url="{% static 'img/bg-img/16.jpg'%}">
-                <!-- Welcome Content -->
-                <div class="welcome-content h-100">
-                    <div class="container h-100">
-                        <div class="row h-100 align-items-center">
-                            <!-- Welcome Text -->
-                            <div class="col-12">
-                                <div class="welcome-text text-center">
-                                    <h6 data-animation="fadeInLeft" data-delay="200ms">Hotel &amp; Resort</h6>
-                                    <h2 data-animation="fadeInLeft" data-delay="500ms">Welcome To Roberto</h2>
-                                    <a href="#" class="btn roberto-btn btn-2" data-animation="fadeInLeft" data-delay="800ms">Discover Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single Welcome Slide -->
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url({% static 'img/bg-img/17.jpg'%});" data-img-url="{% static 'img/bg-img/17.jpg'%}">
-                <!-- Welcome Content -->
-                <div class="welcome-content h-100">
-                    <div class="container h-100">
-                        <div class="row h-100 align-items-center">
-                            <!-- Welcome Text -->
-                            <div class="col-12">
-                                <div class="welcome-text text-center">
-                                    <h6 data-animation="fadeInUp" data-delay="200ms">Hotel &amp; Resort</h6>
-                                    <h2 data-animation="fadeInUp" data-delay="500ms">Welcome To Roberto</h2>
-                                    <a href="#" class="btn roberto-btn btn-2" data-animation="fadeInUp" data-delay="800ms">Discover Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single Welcome Slide -->
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url({% static 'img/bg-img/18.jpg'%});" data-img-url="{% static 'img/bg-img/18.jpg'%}">
-                <!-- Welcome Content -->
-                <div class="welcome-content h-100">
-                    <div class="container h-100">
-                        <div class="row h-100 align-items-center">
-                            <!-- Welcome Text -->
-                            <div class="col-12">
-                                <div class="welcome-text text-center">
-                                    <h6 data-animation="fadeInDown" data-delay="200ms">Hotel &amp; Resort</h6>
-                                    <h2 data-animation="fadeInDown" data-delay="500ms">Welcome To Roberto</h2>
-                                    <a href="#" class="btn roberto-btn btn-2" data-animation="fadeInDown" data-delay="800ms">Discover Now</a>
-                                </div>
+<section class="welcome-area">
+    <div class="welcome-slides owl-carousel">
+        <!-- Single Welcome Slide -->
+        <div class="single-welcome-slide bg-img bg-overlay"
+             style="background-image: url({% static 'img/bg-img/16.jpg' %});"
+             data-img-url="{% static 'img/bg-img/16.jpg' %}">
+            <!-- Welcome Content -->
+            <div class="welcome-content h-100">
+                <div class="container h-100">
+                    <div class="row h-100 align-items-center">
+                        <!-- Welcome Text -->
+                        <div class="col-12">
+                            <div class="welcome-text text-center">
+                                <h6 data-animation="fadeInLeft" data-delay="200ms">Hotel &amp; Resort</h6>
+                                <h2 data-animation="fadeInLeft" data-delay="500ms">Welcome To Roberto</h2>
+                                <a href="#" class="btn roberto-btn btn-2" data-animation="fadeInLeft"
+                                   data-delay="800ms">Discover Now</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Welcome Area End -->
+
+        <!-- Single Welcome Slide -->
+        <div class="single-welcome-slide bg-img bg-overlay"
+             style="background-image: url({% static 'img/bg-img/17.jpg' %});"
+             data-img-url="{% static 'img/bg-img/17.jpg' %}">
+            <!-- Welcome Content -->
+            <div class="welcome-content h-100">
+                <div class="container h-100">
+                    <div class="row h-100 align-items-center">
+                        <!-- Welcome Text -->
+                        <div class="col-12">
+                            <div class="welcome-text text-center">
+                                <h6 data-animation="fadeInUp" data-delay="200ms">Hotel &amp; Resort</h6>
+                                <h2 data-animation="fadeInUp" data-delay="500ms">Welcome To Roberto</h2>
+                                <a href="#" class="btn roberto-btn btn-2" data-animation="fadeInUp" data-delay="800ms">Discover
+                                    Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Single Welcome Slide -->
+        <div class="single-welcome-slide bg-img bg-overlay"
+             style="background-image: url({% static 'img/bg-img/18.jpg' %});"
+             data-img-url="{% static 'img/bg-img/18.jpg' %}">
+            <!-- Welcome Content -->
+            <div class="welcome-content h-100">
+                <div class="container h-100">
+                    <div class="row h-100 align-items-center">
+                        <!-- Welcome Text -->
+                        <div class="col-12">
+                            <div class="welcome-text text-center">
+                                <h6 data-animation="fadeInDown" data-delay="200ms">Hotel &amp; Resort</h6>
+                                <h2 data-animation="fadeInDown" data-delay="500ms">Welcome To Roberto</h2>
+                                <a href="#" class="btn roberto-btn btn-2" data-animation="fadeInDown"
+                                   data-delay="800ms">Discover Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Welcome Area End -->
