--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        {% load static %}
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+    {% load static %}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>{% block title %} Django Dernek Sitesi{% endblock %}</title>
-        <meta name="keywords" content="{% block keywords %} Anasayfa anahtar kelimeleri {% endblock %}">
-        <meta name="description" content="{% block description %} Anasayfa kısa açıklama {% endblock %}">
+    <title>{% block title %} Django Dernek Sitesi{% endblock %}</title>
+    <meta name="keywords" content="{% block keywords %} Anasayfa anahtar kelimeleri {% endblock %}">
+    <meta name="description" content="{% block description %} Anasayfa kısa açıklama {% endblock %}">
 
 
-        <!-- Favicon -->
-        <link rel="icon" href="{% static './img/core-img/favicon.png'%}">
+    <!-- Favicon -->
+    <link rel="icon" href='{% block favicon %}{% endblock %}'>
 
-        <!-- Stylesheet -->
-        <link rel="stylesheet" href="{% static 'style.css'%}">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 
-    </head>
+</head>
 
-    <body>
-        {% include 'header.html' %}
+<body>
+{% include 'header.html' %}
 
-        {% block slider %}  {% endblock %}
+{% block slider %}  {% endblock %}
 
-        {% block content %}  {% endblock %}
+{% block content %}  {% endblock %}
 
-        {% include 'footer.html' %}
+{% include 'footer.html' %}
 
-        {% block foot %} {% endblock %}
-    </body>
+{% block foot %} {% endblock %}
+</body>
 </html>
