Aboutus,References,Contact pages created

--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -64,9 +64,8 @@
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul id="nav">
-                                <li class="active"><a href="./index.html">Home</a></li>
-                                <li><a href="./room.html">Rooms</a></li>
-                                <li><a href="./about.html">About Us</a></li>
+                                <li class="active"><a href="/">Anasayfa</a></li>
+                                <li><a href="/hakkimizda">Hakkımızda</a></li>
                                 <li><a href="#">Pages</a>
                                     <ul class="dropdown">
                                         <li><a href="./index.html">- Home</a></li>
@@ -86,8 +85,8 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="./blog.html">News</a></li>
-                                <li><a href="./contact.html">Contact</a></li>
+                                <li><a href="/referanslar">Referanslarımız</a></li><!--Haberler blog.html yi kullansın-->
+                                <li><a href="/iletisim">İletişim</a></li>
                             </ul>
 
                             <!-- Search -->
