--- a/home/templates/iletisim.html
+++ b/home/templates/iletisim.html
@@ -32,7 +32,7 @@
     <!-- Breadcrumb Area End -->
 
      <!-- About Us Area Start -->
-    <section class="roberto-about-us-area ">
+    <section class="roberto-about-us-area section-padding-100">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 ">
@@ -42,5 +42,43 @@
         </div>
     </section>
     <!-- About Us Area End -->
+
+     <!-- Contact Form Area Start -->
+    <div class="roberto-contact-form-area ">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <!-- Section Heading -->
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                        <h6>Contact Us</h6>
+                        <h2>Leave Message</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="roberto-contact-form" id="form">
+
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-{{ message.tags }}" role="alert">
+                                    {{ message }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <input type="submit" class="btn roberto-btn mt-15" value="SEND FORM">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Contact Form Area End -->
+
 
 {% endblock %}
