--- a/home/templates/iletisim.html
+++ b/home/templates/iletisim.html
@@ -58,7 +58,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="roberto-contact-form" id="form">
+                    <div class="roberto-contact-form">
 
                         {% if messages %}
                             {% for message in messages %}
