Content Detail created

--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -17,6 +17,8 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static  'ozel.css' %}">
+
 
 
 </head>
