--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -16,7 +16,7 @@
                             <div class="welcome-text text-center">
                                 <h6 data-animation="fadeInLeft" data-delay="200ms">{{ rs.description }}</h6>
                                 <h2 data-animation="fadeInLeft" data-delay="500ms">{{ rs.title }}</h2>
-                                <a href="/content/{{ rs.id }}/{{ rs.slug }}" class="btn roberto-btn btn-2" data-animation="fadeInLeft"
+                                <a href="/content/{{ rs.menu_id }}/{{ rs.slug }}" class="btn roberto-btn btn-2" data-animation="fadeInLeft"
                                    data-delay="800ms">Detay</a>
                             </div>
                         </div>
