--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -1,92 +1,4 @@
-<!-- About Us Area Start -->
-<section class="roberto-about-area section-padding-100-0">
-    {% load static %}
-
-    <div class="container mt-100">
-        <div class="row align-items-center">
-            <div class="col-12 col-lg-6">
-                <!-- Section Heading -->
-                <div class="section-heading wow fadeInUp" data-wow-delay="100ms">
-                    <h6>About Us</h6>
-                    <h2>Welcome to <br>Roberto Hotel Luxury</h2>
-                </div>
-                <div class="about-us-content mb-100">
-                    <h5 class="wow fadeInUp" data-wow-delay="300ms">With over 340 hotels worldwide, NH Hotel Group
-                        offers a wide variety of hotels catering for a perfect stay no matter where your
-                        destination.</h5>
-                    <p class="wow fadeInUp" data-wow-delay="400ms">Manager: <span>Michen Taylor</span></p>
-                    <img src="{% static 'img/core-img/signature.png' %}" alt="" class="wow fadeInUp"
-                         data-wow-delay="500ms">
-                </div>
-            </div>
-
-            <div class="col-12 col-lg-6">
-                <div class="about-us-thumbnail mb-100 wow fadeInUp" data-wow-delay="700ms">
-                    <div class="row no-gutters">
-                        <div class="col-6">
-                            <div class="single-thumb">
-                                <img src="{% static 'img/bg-img/13.jpg' %}" alt="">
-                            </div>
-                            <div class="single-thumb">
-                                <img src="{% static 'img/bg-img/14.jpg' %}" alt="">
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="single-thumb">
-                                <img src="{% static 'img/bg-img/15.jpg' %}" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- About Us Area End -->
-
-<!-- Service Area Start -->
-<div class="roberto-service-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="service-content d-flex align-items-center justify-content-between">
-                    <!-- Single Service Area -->
-                    <div class="single-service--area mb-100 wow fadeInUp" data-wow-delay="100ms">
-                        <img src="{% static 'img/core-img/icon-1.png' %}" alt="">
-                        <h5>Transportion</h5>
-                    </div>
-
-                    <!-- Single Service Area -->
-                    <div class="single-service--area mb-100 wow fadeInUp" data-wow-delay="300ms">
-                        <img src="{% static 'img/core-img/icon-2.png' %}" alt="">
-                        <h5>Reiseservice</h5>
-                    </div>
-
-                    <!-- Single Service Area -->
-                    <div class="single-service--area mb-100 wow fadeInUp" data-wow-delay="500ms">
-                        <img src="{% static 'img/core-img/icon-3.png' %}" alt="">
-                        <h5>Spa Relaxtion</h5>
-                    </div>
-
-                    <!-- Single Service Area -->
-                    <div class="single-service--area mb-100 wow fadeInUp" data-wow-delay="700ms">
-                        <img src="{% static 'img/core-img/icon-4.png' %}" alt="">
-                        <h5>Restaurant</h5>
-                    </div>
-
-                    <!-- Single Service Area -->
-                    <div class="single-service--area mb-100 wow fadeInUp" data-wow-delay="900ms">
-                        <img src="{% static 'img/core-img/icon-1.png' %}" alt="">
-                        <h5>Bar &amp; Drink</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Service Area End -->
-
-
+{% load static %}
 <!-- Testimonials Area Start -->
 <section class="roberto-testimonials-area section-padding-100-0">
     <div class="container">
@@ -297,7 +209,7 @@
 </section>
 <!-- Projects Area End -->
 
-<!-- Blog Area Start -->
+<!-- Blog News Area Start -->
 <section class="roberto-blog-area section-padding-100-0">
     <div class="container">
         <div class="row">
@@ -312,58 +224,21 @@
 
         <div class="row">
             <!-- Single Post Area -->
+            {% for rs in latestnews%}
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="single-post-area mb-100 wow fadeInUp" data-wow-delay="300ms">
-                    <a href="#" class="post-thumbnail"><img src="{% static 'img/bg-img/2.jpg' %}" alt=""></a>
+                    <a href="/content/{{ rs.menu_id }}/{{ rs.slug }}" class="post-thumbnail"><img src="{{ rs.image.url }}" alt=""></a>
                     <!-- Post Meta -->
                     <div class="post-meta">
-                        <a href="#" class="post-date">Jan 02, 2019</a>
-                        <a href="#" class="post-catagory">Event</a>
+                        <a href="#" class="post-date">{{ rs.update_at }}</a>
+                        <a href="#" class="post-catagory">Detay</a>
                     </div>
                     <!-- Post Title -->
-                    <a href="#" class="post-title">Learn How To Motivate Yourself</a>
-                    <p>How many free autoresponders have you tried? And how many emails did you get through using
-                        them?</p>
-                    <a href="index.html" class="btn continue-btn"><i class="fa fa-long-arrow-right"
-                                                                     aria-hidden="true"></i></a>
+                    <a href="#" class="post-title">{{ rs.title }}</a>
                 </div>
             </div>
-
-            <!-- Single Post Area -->
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="single-post-area mb-100 wow fadeInUp" data-wow-delay="500ms">
-                    <a href="#" class="post-thumbnail"><img src="{% static 'img/bg-img/3.jpg' %}" alt=""></a>
-                    <!-- Post Meta -->
-                    <div class="post-meta">
-                        <a href="#" class="post-date">Jan 02, 2019</a>
-                        <a href="#" class="post-catagory">Event</a>
-                    </div>
-                    <!-- Post Title -->
-                    <a href="#" class="post-title">What If Let You Run The Hubble</a>
-                    <p>My point here is that if you have no clue for the answers above you probably are not operating a
-                        followup.</p>
-                    <a href="index.html" class="btn continue-btn"><i class="fa fa-long-arrow-right"
-                                                                     aria-hidden="true"></i></a>
-                </div>
-            </div>
-
-            <!-- Single Post Area -->
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="single-post-area mb-100 wow fadeInUp" data-wow-delay="700ms">
-                    <a href="#" class="post-thumbnail"><img src="{% static 'img/bg-img/4.jpg' %}" alt=""></a>
-                    <!-- Post Meta -->
-                    <div class="post-meta">
-                        <a href="#" class="post-date">Jan 02, 2019</a>
-                        <a href="#" class="post-catagory">Event</a>
-                    </div>
-                    <!-- Post Title -->
-                    <a href="#" class="post-title">Six Pack Abs The Big Picture</a>
-                    <p>Some good steps to take to ensure you are getting what you need out of a autoresponder
-                        include…</p>
-                    <a href="index.html" class="btn continue-btn"><i class="fa fa-long-arrow-right"
-                                                                     aria-hidden="true"></i></a>
-                </div>
-            </div>
+            {% endfor %}
+            <!-- /Single Post Area end -->
 
         </div>
     </div>
@@ -379,11 +254,11 @@
                 <div class="col-12 col-md-7">
                     <div class="cta-text mb-50">
                         <h2>Contact us now!</h2>
-                        <h6>Contact (+12) 345-678-9999 to book directly or for advice</h6>
+                        <h6>{{ setting.phone }}</h6>
                     </div>
                 </div>
                 <div class="col-12 col-md-5 text-right">
-                    <a href="#" class="btn roberto-btn mb-50">Contact Now</a>
+                    <a href="/iletisim" class="btn roberto-btn mb-50">Contact Now</a>
                 </div>
             </div>
         </div>
