--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -65,18 +65,21 @@
                         <div class="classynav">
 
                             <ul id="nav">
-                            {% load mptt_tags %}
+                                <li><a href="/">Anasayfa</a></li>
+                                <li><a href="/hakkimizda">Hakkımızda</a></li>
+                                <li><a href="/referanslar">Referanslarımız</a></li>
+
+                                {% load mptt_tags %}
                                     {% recursetree menu %}
-                                        <li><a href="/{{ node.slug }}">{{ node.title }}</a>
+                                        <li><a href="/menu/{{ node.id }}/{{ node.slug }}">{{ node.title }}</a>
                                             {% if not node.is_leaf_node %}
                                                 <ul class="dropdown">
-                                                    <li><a href="/{{ node.slug }}"> {{ children }}</a></li>
-                                                    {% if not node.is_leaf_node %}{% endif %}
+                                                    {{ children }}
                                                 </ul>
                                             {% endif %}
                                         </li>
                                     {% endrecursetree %}
-
+                                <li><a href="/iletisim">İletişim</a></li>
                             </ul>
 
                             <!-- Search -->
