--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -103,6 +103,7 @@
 <!-- Footer Area End -->
 
 <!-- **** All JS Files ***** -->
+<script src="{% static 'js/ozel.js' %}"></script>
 <!-- jQuery 2.2.4 -->
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <!-- Popper -->
