--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -18,7 +18,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="{% static  'ozel.css' %}">
-
+    <link rel="stylesheet" href="{% static  'css/font-awesome.min.css' %}">
 
 
 </head>
