--- a/home/static/ozel.css
+++ b/home/static/ozel.css
@@ -5,3 +5,43 @@
 .carousel-indicators img{
     max-height: 60px !important;
 }
+
+/*Bootstrap 4 Star rating with pure css Start*/
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center
+}
+
+.rating>input {
+    display: none
+}
+
+.rating>label {
+    position: relative;
+    width: 1em;
+    font-size: 3vw;
+    color: #FFD600;
+    cursor: pointer
+}
+
+.rating>label::before {
+    content: "\2605";
+    position: absolute;
+    opacity: 0
+}
+
+.rating>label:hover:before,
+.rating>label:hover~label:before {
+    opacity: 1 !important
+}
+
+.rating>input:checked~label:before {
+    opacity: 1
+}
+
+.rating:hover>input:checked~label:before {
+    opacity: 0.4
+}
+
+/*Bootstrap 4 Star rating with pure css End*/
