--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -227,7 +227,7 @@
             {% for rs in latestnews%}
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="single-post-area mb-100 wow fadeInUp" data-wow-delay="300ms">
-                    <a href="/content/{{ rs.menu_id }}/{{ rs.slug }}" class="post-thumbnail"><img src="{{ rs.image.url }}" alt=""></a>
+                    <a href="/content/{{ rs.id }}/{{ rs.slug }}" class="post-thumbnail"><img src="{{ rs.image.url }}" alt=""></a>
                     <!-- Post Meta -->
                     <div class="post-meta">
                         <a href="#" class="post-date">{{ rs.update_at }}</a>
