--- a/home/static/ozel.css
+++ b/home/static/ozel.css
@@ -5,6 +5,9 @@
 .carousel-indicators img{
     max-height: 60px !important;
 }
+.ui-menu .ui-menu-item{
+    background-color: white !important;
+}
 
 /*Bootstrap 4 Star rating with pure css Start*/
 .rating {
