--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -12,14 +12,21 @@
     <meta name="description" content="{% block description %} Anasayfa kısa açıklama {% endblock %}">
 
 
+
     <!-- Favicon -->
     <link rel="icon" href='{% block favicon %}{% endblock %}'>
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="{% static  'ozel.css' %}">
-    <link rel="stylesheet" href="{% static  'css/font-awesome.min.css' %}">
+    <script src="https://kit.fontawesome.com/fb251c0c7f.js" crossorigin="anonymous"></script>
 
+
+    <!-- jQuery !-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <!-- jQuery UI !-->
+    <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
 </head>
 
