User Sing Up created

--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -100,7 +100,7 @@
                                     {% else %}
                                         <a href="/login/">Login</a>
                                         <strong>/</strong>
-                                        <a href="/join/">Join</a>
+                                        <a href="/signup/">Sign Up</a>
                                     {% endif %}
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                         <a class="dropdown-item" href="#"><i class="far fa-user"></i> My Account</a>
