UserProfile Model created

--- a/home/templates/content_detail.html
+++ b/home/templates/content_detail.html
@@ -86,7 +86,7 @@
                         {% for rs in comments %}
                             <div class="single-room-review-area d-flex align-items-center">
                                 <div class="reviwer-thumbnail">
-                                    <img src="img/bg-img/55.jpg" alt="">
+                                    <img src="{{ rs.user.image }}" alt="">
                                 </div>
                                 <div class="reviwer-content">
                                     <div class="reviwer-title-rating d-flex align-items-center justify-content-between">
